clusters/cl01tl/manifests/ollama/HTTPRoute-ollama.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ollama
  labels:
    app.kubernetes.io/instance: ollama
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: ollama
    helm.sh/chart: ollama-5.3.0
  namespace: ollama
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: "traefik"
  hostnames:
    - "ollama.alexlebens.dev"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: ollama-router
          namespace: ollama
          port: 11434
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
